Change project title for clarity
Updated the title of the thesis project for clarity.

--- a/content/projects/envshare.mdx
+++ b/content/projects/envshare.mdx
@@ -1,6 +1,5 @@
 ---
-title: "Choke Point: A Tri-Objective Simulation–Optimization Model of the Resilience–Decarbonization Trade-off at the CoWoS/HBM Packaging Stage of the Global Semiconductor Supply Chain"
-description: Thesis project modeling the cost–resilience–carbon trade-off at the CoWoS/HBM advanced packaging chokepoint, under realistic disruption scenarios and without assuming cross-firm data sharing.
+title: "Investigation: CoWoS/HBM Resilience–Decarbonization Trade-off"
 repository: "" # add a repo name later if you put the model on GitHub
 date: "2025-12-15"
 published: true
