Fix published field casing in envshare.mdx

--- a/content/projects/envshare.mdx
+++ b/content/projects/envshare.mdx
@@ -2,7 +2,7 @@
 title: "Investigation: CoWoS/HBM Resilience–Decarbonization Trade-off"
 repository: "" # add a repo name later if you put the model on GitHub
 date: "2025-12-15"
-published: True
+published: true
 ---
 
 > Reality check: this is an active thesis, not a finished product. The whole point is to make the trade-offs at one very specific chokepoint visible and quantifiable.
