--- a/content/projects/access.mdx
+++ b/content/projects/access.mdx
@@ -1,6 +1,6 @@
 ---
 title: "Manufacturing Cost Intelligence System"
-description: A “flight simulator” for manufacturing decisions that replaces gut-feel spreadsheets.
+description: A “flight simulator” for manufacturing decisions that replaces gut feel spreadsheets.
 repository: benjaminarce-cloud/manufacturing-cost-intelligence
 date: "2025-12-01"
 published: true
